# deft

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  PRIVACY.md  README.md  TERMS.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: cli.md  manifest.md
docs/guides/: architecture.md  cli.md  manifest.md  migration.md
src/: cli.rs  compiler.rs  doctor.rs  engine.rs  error.rs  hash.rs  json.rs  main.rs  manifest.rs  migrate.rs  resolver.rs
