[package]
name = "deft"
version = "0.3.0"
edition = "2021"
authors = ["deft contributors"]
description = "Next-gen build system for C/C++."
license = "MIT"
repository = "https://github.com/deft-cli/deft"

[[bin]]
name = "deft"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"