[package]
name = "deft"
version = "0.4.0"
edition = "2021"
authors = ["deft contributors"]
description = "A modern package manager and build system for C and C++, with strict
project-layout enforcement and deep Clang integration."
license = "MIT"
repository = "https://github.com/deft-cli/deft"

[[bin]]
name = "deft"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"